--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
     <!-- Title -->
-    <title>Samrat - One Page Personal Portfolio Template</title>
+    <title>Anthony Vallejos Portfolio</title>
 
     <!-- Common Stylesheet -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -403,7 +403,7 @@
         </div>
     </section>
     <!-- Portfolio Section End -->
-    <div class="clearfix"></div>
+    <!-- <div class="clearfix"></div> -->
 
     <!-- Fact Counter Section Start -->
     <!-- <section id="fact-counter" class="small-section bg-black fact-counter">
