--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     </div>
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography web">
-                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="Profile">Profile</span> </a>
+                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Profile</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
