--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography app">
-                        <a href="images/work/work-2.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Gaming OS" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-2.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Gaming OS</span> </a>
+                        <a href="images/work/work-2.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Logo Color Variations" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-2.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Logo Color Variations</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app photography">
-                        <a href="images/work/work-3.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Arcade App" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-3.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Arcade App</span> </a>
+                        <a href="images/work/work-3.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Rap Battle League Homepage" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-3.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Rap Battle League Homepage</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
@@ -386,7 +386,7 @@
                     </div>
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography web">
-                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Profile</span> </a>
+                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Profile App Page" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Profile App Page</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
