--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-lg navbar-dark">
-                            <a class="navbar-brand" href="#">Samrat</a>
+                            <a class="navbar-brand" href="#">Anthony Vallejos</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -657,7 +657,7 @@
                             </div>
                             <div class="contact-text">
                                 <h5>Call</h5>
-                                <p><a href="tel:+123456789">(714) 316-9748</a></p>
+                                <p><a href="tel:+1(714)316-9748">(714)316-9748</a></p>
                             </div>
                         </div>
                     </div>
