--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-lg navbar-dark">
-                            <a class="navbar-brand" href="#">Anthony Vallejos</a>
+                            <a class="navbar-brand" href="#">Anthony</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
