--- a/index.html
+++ b/index.html
@@ -682,8 +682,8 @@
                                 <span class="mbri-map-pin"></span>
                             </div>
                             <div class="contact-text">
-                                <h5>Mail</h5>
-                                <p><a href="#">PO Box 28752 Santa Ana, CA 92799</a></p>
+                                <h5>Location</h5>
+                                <p>Costa Mesa, CA</p>
                             </div>
                         </div>
                     </div>
