--- a/index.html
+++ b/index.html
@@ -398,6 +398,36 @@
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
                         <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="NFC Game Play" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">NFC Game Play</span> </a>
                     </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
+                    </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-11.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-11.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
+                    </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-12.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-12.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments</span> </a>
+                    </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-13.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-13.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments</span> </a>
+                    </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-14.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Typography" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-14.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Typography</span> </a>
+                    </div>
+
+                    <!-- Portfolio Image and Caption -->
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                        <a href="images/work/work-15.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Packaging" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-15.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Packaging</span> </a>
+                    </div>
                 </div>
             </div>
         </div>
