--- a/index.html
+++ b/index.html
@@ -391,17 +391,17 @@
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app photography web">
-                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="App Feed" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">App Feed</span> </a>
+                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction " data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduciton</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="NFC Game Play" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">NFC Game Play</span> </a>
+                        <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Login/Feed" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Login/Feed</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
+                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Notifications/Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Notifications/Profile</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
