--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app photography web">
-                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction " data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduciton</span> </a>
+                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction " data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduction</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
