--- a/index.html
+++ b/index.html
@@ -386,22 +386,22 @@
                     </div>
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography web">
-                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Profile App Page" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Profile App Page</span> </a>
+                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduction</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app photography web">
-                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction " data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduction</span> </a>
+                        <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Login/Feed" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Login/Feed</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Login/Feed" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Login/Feed</span> </a>
+                        <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Notifications/Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Notifications/Profile</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Notifications/Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Notifications/Profile</span> </a>
+                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
@@ -569,6 +569,20 @@
                 <ul>
 
                     <!-- Timeline Panel -->
+                    <li class="timeline-inverted">
+                        <div class="timeline-icon"></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-title">
+                                <p>2018</p>
+                                <h5>Udemy Academy - Online Course</h5>
+                            </div>
+                            <div class="timeline-text">
+                                <p>User Experience Design Fundamentals</p>
+                            </div>
+                        </div>
+                    </li>
+
+<!-- Timeline Panel -->
                     <li class="timeline-inverted">
                         <div class="timeline-icon"></div>
                         <div class="timeline-panel">
