--- a/index.html
+++ b/index.html
@@ -341,15 +341,16 @@
 
             <div class="row">
                 <!-- Portfolio Control -->
-                <!--<div class="portfolio-controls">
+                <<div class="portfolio-controls">
                     <ul>
                         <li class="filter" data-filter="all">Show all</li>
-                        <li class="filter" data-filter=".web">Web design</li>
-                        <li class="filter" data-filter=".app">App development</li>
-                        <li class="filter" data-filter=".photography">Photography</li>
+                        <li class="filter" data-filter=".web">Web Design</li>
+                        <li class="filter" data-filter=".app">App Development</li>
+                        <li class="filter" data-filter=".graphic">Graphic Design</li>
+                        <li class="filter" data-filter=".Logo">Logo Design</li>
                     </ul>
                 </div>
-            </div>-->
+            </div>
 
             <!-- Portfolio Showcase -->
             <div class="portfolio-showcase">
