--- a/index.html
+++ b/index.html
@@ -357,76 +357,76 @@
                 <div class="row">
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix logo">
                         <a href="images/work/work-1.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Logo Design for Client" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-1.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Logo Design for Client</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix logo">
                         <a href="images/work/work-2.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Logo Color Variations" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-2.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Logo Color Variations</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app photography">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web logo">
                         <a href="images/work/work-3.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Rap Battle League Homepage" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-3.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Rap Battle League Homepage</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography web">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix logo">
                         <a href="images/work/work-4.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Logo Design for Company" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-4.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Logo Design for Company</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app photography web">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
                         <a href="images/work/work-5.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Company Landing Page" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-5.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Company Landing Page</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-6.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Tournament Finder" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-6.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Tournament Finder</span> </a>
                     </div>
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix photography web">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduction</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app photography web">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-8.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Login/Feed" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-8.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Login/Feed</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-9.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Notifications/Profile" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-9.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Notifications/Profile</span> </a>
 					</div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 app">
                         <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-11.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-11.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
+                        <a href="images/work/work-11.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Wireframe" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-11.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Wireframe</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
                         <a href="images/work/work-12.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-12.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
-                        <a href="images/work/work-13.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-13.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments</span> </a>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
+                        <a href="images/work/work-13.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments Wireframe" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-13.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments Wireframe</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix graphic logo">
                         <a href="images/work/work-14.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Typography" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-14.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Typography</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix graphic logo">
                         <a href="images/work/work-15.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Packaging" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-15.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Packaging</span> </a>
                     </div>
                 </div>
