--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <li class="filter" data-filter=".web">Web Design</li>
                         <li class="filter" data-filter=".app">App Development</li>
                         <li class="filter" data-filter=".graphic">Graphic Design</li>
-                        <li class="filter" data-filter=".Logo">Logo Design</li>
+                        <li class="filter" data-filter=".logo">Logo Design</li>
                     </ul>
                 </div>
             </div>
