--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 					</div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
                     </div>
 
