--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
             <div class="row">
                 <!-- Portfolio Control -->
-                <<div class="portfolio-controls">
+                <div class="portfolio-controls">
                     <ul>
                         <li class="filter" data-filter="all">Show all</li>
                         <li class="filter" data-filter=".web">Web Design</li>
