--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web logo">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
                         <a href="images/work/work-3.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Rap Battle League Homepage" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-3.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Rap Battle League Homepage</span> </a>
                     </div>
 
