--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     </div>
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
-                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay App Introduction" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay App Introduction</span> </a>
+                        <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Logo" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Logo</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
@@ -402,32 +402,32 @@
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
-                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Concept" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Concept</span> </a>
+                        <a href="images/work/work-10.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="The Colosseum Venue Wireframes" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-10.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">The Colosseum Venue Wireframes</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
-                        <a href="images/work/work-11.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Food & Entertainment App Wireframe" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-11.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Food & Entertainment App Wireframe</span> </a>
+                        <a href="images/work/work-11.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Hifi Colosseum Venue App" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-11.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Hifi Colosseum Venue App</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
-                        <a href="images/work/work-12.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-12.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments</span> </a>
+                        <a href="images/work/work-12.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Hifi Coloseeum Venue App - Rewards" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-12.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Hifi Coloseeum Venue App - Rewards</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
-                        <a href="images/work/work-13.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments Wireframe" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-13.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments Wireframe</span> </a>
+                        <a href="images/work/work-13.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments - Wireframes" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-13.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments - Wireframes</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix graphic logo">
-                        <a href="images/work/work-14.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Typography" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-14.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Typography</span> </a>
+                        <a href="images/work/work-14.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments - Hifi" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-14.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments - Hifi</span> </a>
                     </div>
 
                     <!-- Portfolio Image and Caption -->
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix graphic logo">
-                        <a href="images/work/work-15.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Packaging" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-15.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Packaging</span> </a>
+                        <a href="images/work/work-15.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Alchemist Juice Packaging" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-15.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Alchemist Juice Packaging</span> </a>
                     </div>
                 </div>
             </div>
