--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <a href="images/work/work-6.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Tournament Finder" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-6.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Tournament Finder</span> </a>
                     </div>
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix logo">
                         <a href="images/work/work-7.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="SafePay Logo" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-7.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">SafePay Logo</span> </a>
                     </div>
 
@@ -421,7 +421,7 @@
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix graphic logo">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
                         <a href="images/work/work-14.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="OS for eSports Tournaments - Hifi" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-14.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">OS for eSports Tournaments - Hifi</span> </a>
                     </div>
 
