--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     </div>
 
                     <!-- Portfolio Image and Caption -->
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix web">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mix app">
                         <a href="images/work/work-12.jpg" data-lightbox="image-1" class="portfolio-effect" data-fresco-group="" data-title="Hifi Coloseeum Venue App - Rewards" data-fresco-caption=""> <img class="portfolio-img" src="images/work/work-12.jpg" alt=""> <span class="portfolio-overlay"></span> <span class="portfolio-text">Hifi Coloseeum Venue App - Rewards</span> </a>
                     </div>
 
